--- a/admin/administracion.html
+++ b/admin/administracion.html
@@ -15,7 +15,7 @@
         <div>
             <ul>
                 <li><p><a href="gestionarMenu.html">Gestionar menú</a></p></li>
-                <li><p><a href="gestionarPedidos.html">Gestionar pedidos</a></p></li>
+                <li><p><a href="adminPedidos.html">Gestionar pedidos</a></p></li>
                 <li><p><a href="gestionarRoles.html">Gestionar roles</a></p></li>
                 <li><p><a href="#Dashboard">Dashboard</a></p></li>
             </ul>
