--- a/carta.html
+++ b/carta.html
@@ -42,8 +42,7 @@
   <!-- ===== HEADER ===== -->
   <div class="headerPrincipal">
     <div class="logo">
-      <img src="images/Pizza-Logo-Design-Graphics-29132095-1.jpg" alt="PizzaLine Logo">
-      <h1>PizzaLine</h1>
+      <img src="images/pizzalinePNG3.png" alt="PizzaLine Logo" id="cartaLogoPng">
     </div>
 
     <!-- NAV -->
