--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 
     <!-- LOGO -->
     <div class="logo" style="display:flex; align-items:center; gap:10px;">
-      <img src="images/LogoTipoPizzaLine.png" alt="PizzaLine Logo"
-        style="width:300px; height:150px; border-radius:8px;" />
+      <img src="images/pizzalinePNG3.png" alt="PizzaLine Logo" id="logoPizzaLinePng"
+        style="width:150px; height:100px; border-radius:8px;" />
     </div>
 
     <!-- NAV -->
@@ -111,17 +111,16 @@
       Lun-Vie: 19:00 - 00:00<br>
       Sab-Dom: 12:00 - 15:00 / 19:00 - 01:00
     </p>
-
+    <br>
     <h4>Redes</h4>
     <div class="socials" style="margin-bottom:15px;">
       <a href="https://instagram.com" target="_blank">Instagram</a> |
       <a href="https://facebook.com" target="_blank">Facebook</a>
     </div>
-
     <div class="social-icons" style="display:flex; justify-content:center; gap:20px; margin-top:10px;">
       <img src="images/Instagram_logo_2022.svg.png" alt="Instagram" style="width:70px;" />
       <img src="images/Logo_de_Facebook.png" alt="Facebook" style="width:70px;" />
-    </div>
+    </div> <br><br>
 
     <h4>Ubicación</h4>
     <div class="ubicacion" style="display:flex; align-items:center; gap:10px;">
