--- a/admin/administracion.html
+++ b/admin/administracion.html
@@ -17,7 +17,7 @@
                 <li><p><a href="gestionarMenu.html">Gestionar menú</a></p></li>
                 <li><p><a href="adminPedidos.html">Gestionar pedidos</a></p></li>
                 <li><p><a href="gestionarRoles.html">Gestionar roles</a></p></li>
-                <li><p><a href="#Dashboard">Dashboard</a></p></li>
+                <li><p><a href="adminDashboard.html">Dashboard</a></p></li>
             </ul>
         </div>
     </main>
