--- a/admin/adminDashboard.html
+++ b/admin/adminDashboard.html
@@ -14,7 +14,7 @@
   <p style="text-align:center;">Estadísticas generales del sistema</p>
 
   <!-- Contenedor del gráfico -->
-  <div style="width: 600px; margin:40px auto;">
+  <div id="grafCont">
       <canvas id="graficoPedidos"></canvas>
   </div>
 
