--- a/branches.html
+++ b/branches.html
@@ -14,8 +14,7 @@
     <!-- ===== HEADER ===== -->
     <div class="headerPrincipal">
         <div class="logo">
-            <img src="images/Pizza-Logo-Design-Graphics-29132095-1.jpg" alt="PizzaLine Logo">
-            <h1>PizzaLine</h1>
+            <img src="images/pizzalinePNG3.png" alt="PizzaLine Logo" id="logoPizza56">
         </div>
 
         <div class="navPrincipal">
@@ -58,7 +57,24 @@
                     <h3>Villa Regina</h3>
                     <p>Rivadavia 1020<br>Tel: (0298) 445-2000</p>
                 </div>
+                            <!-- TARJETA 4 -->
+                <div class="promo-card">
+                    <h3>Rosario</h3>
+                    <p>Bv. Oroño 1250<br>Tel: (0341) 430-9988</p>
+                </div>
 
+                <!-- TARJETA 5 -->
+                <div class="promo-card">
+                    <h3>Córdoba Capital</h3>
+                    <p>Av. Colón 3200<br>Tel: (0351) 478-6600</p>
+                </div>
+
+                <!-- TARJETA 6 -->
+                <div class="promo-card">
+                    <h3>Mendoza</h3>
+                    <p>San Martín 1440<br>Tel: (0261) 429-3000</p>
+                </div>
+                
             </div>
             <!-- FIN CONTENEDOR PROMOS -->
         </section>
