--- a/index.html
+++ b/index.html
@@ -11,22 +11,10 @@
 <body>
 
   <!-- ==================== AVISO LOGIN ==================== -->
-  <div id="login-warning" style="display:none;
-              padding:20px;
-              background:#ffe5e5;
-              border:2px solid #d32f2f;
-              color:#b71c1c;
-              font-weight:bold;
-              text-align:center;
-              margin:20px;
-              border-radius:10px;">
+  <div id="login-warning">
     ⚠ Necesitas iniciar sesión para continuar
     <br><br>
-    <a href="login.html" style="background:#d32f2f;
-              color:white;
-              padding:10px 20px;
-              border-radius:6px;
-              text-decoration:none;">
+    <a id="inicio453" href="login.html">
       Ir al login
     </a>
   </div>
@@ -39,9 +27,8 @@
     style="display:flex; justify-content:space-between; align-items:center; padding:10px 20px;">
 
     <!-- LOGO -->
-    <div class="logo" style="display:flex; align-items:center; gap:10px;">
-      <img src="images/pizzalinePNG3.png" alt="PizzaLine Logo" id="logoPizzaLinePng"
-        style="width:150px; height:100px; border-radius:8px;" />
+    <div class="logo">
+      <img src="images/pizzalinePNG3.png" alt="PizzaLine Logo" id="logoPizzaLinePng"/>
     </div>
 
     <!-- NAV -->
