--- a/info.html
+++ b/info.html
@@ -35,8 +35,7 @@
     <!-- ===== HEADER ===== -->
     <div class="headerPrincipal">
         <div class="logo">
-            <img src="images/Pizza-Logo-Design-Graphics-29132095-1.jpg" alt="PizzaLine Logo">
-            <h1>PizzaLine</h1>
+            <img src="images/pizzalinePNG3.png" alt="PizzaLine Logo" id="logoPizza22">
         </div>
 
         <div class="navPrincipal">
@@ -58,14 +57,6 @@
         <span class="textoVolver">Volver</span>
     </a>
 
-    <header id="headerInfo">
-        <h1 id="h1Info">pizzaLine</h1>
-        <nav id="navInfo">
-            <a href="#inicio" class="aInfo">Inicio</a>
-            <a href="#historia" class="aInfo">Sobre nosotros</a>
-            <a href="#contacto" class="aInfo">Contacto</a>
-        </nav>
-    </header>
 
     <section class="sectionInfo" id="inicio">
         <h2 class="h2SectionInfo">Bienvenidos</h2>
