--- a/admin/agregarPromos.html
+++ b/admin/agregarPromos.html
@@ -32,7 +32,7 @@
                 <select id="imagen" required>
                     <option value="" disabled selected>Seleccionar imagen...</option>
 
-                    <option value="promo1.jpg">Promo 1</option>
+                    <option value="images/promo2x1.png">Promo 2x1</option>
                     <option value="promo2.jpg">Promo 2</option>
                     <option value="promo3.jpg">Promo 3</option>
                 </select>
