--- a/admin/gestionarMenu.html
+++ b/admin/gestionarMenu.html
@@ -4,22 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../../style.css">
+
 </head>
-<body>
-    <nav><a href="administracion.html">Inicio</a></nav>
-    <div>
-    <a href="MENU (mockapi)/agregarItem.html">
-        <button type="button">Agregar Item</button>
-    </a>
+<body class="page-gestionar-menu">
 
-    <a href="agregarPromos.html">
-        <button type="button">Agregar Promoción</button>
-    </a>
+    <nav class="menu-nav">
+        <a class="btn-volver" href="administracion.html">← Volver</a>
+    </nav>
 
-    <a href="eliminarElementos.html">
-        <button type="button">Visibilidad de productos</button>
-    </a>
-</div>
+    <main class="menu-container">
+
+        <a class="menu-btn" href="MENU (mockapi)/agregarItem.html">
+            Agregar Item
+        </a>
+
+        <a class="menu-btn" href="agregarPromos.html">
+            Agregar Promoción
+        </a>
+
+        <a class="menu-btn" href="eliminarElementos.html">
+            Visibilidad de productos
+        </a>
+
+    </main>
 
 </body>
 </html>
