--- a/admin/administracion.html
+++ b/admin/administracion.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../../style.css">
 </head>
-<body>
+<body class="page-administracion">
     <nav>
         <h2>PizzaLine administración</h2>
         <button id="btn-logout">Cerrar sesión</button>
-
     </nav>
     <main>
-        <div>
+        <div class="admin-container">
             <ul>
-                <li><p><a href="gestionarMenu.html">Gestionar menú</a></p></li>
-                <li><p><a href="adminPedidos.html">Gestionar pedidos</a></p></li>
-                <li><p><a href="gestionarRoles.html">Gestionar roles</a></p></li>
-                <li><p><a href="adminDashboard.html">Dashboard</a></p></li>
+                <li><a class="admin-btn" href="gestionarMenu.html">Gestionar menú</a></li>
+                <li><a class="admin-btn" href="adminPedidos.html">Gestionar pedidos</a></li>
+                <li><a class="admin-btn" href="gestionarRoles.html">Gestionar roles</a></li>
+                <li><a class="admin-btn" href="adminDashboard.html">Dashboard</a></li>
             </ul>
         </div>
     </main>
