--- a/info.html
+++ b/info.html
@@ -38,7 +38,7 @@
 
     <section class="sectionInfo" id="inicio">
         <h2 class="h2SectionInfo">Bienvenidos</h2>
-        <img class="imgSectionInfo" src="images/Pizza-Logo-Design-Graphics-29132095-1.jpg" alt="LOGO DE LA PIZZERIA">
+        <img class="imgSectionInfo" src="images/LogoTipoPizzaLine.png" alt="LOGO DE LA PIZZERIA">
         <p class="pSectionInfo">
             En PizzaLine, hacemos pizza artesanal con el corazón puesto en cada masa. Somos una pizzería familiar que
             combina la auténtica tradición napolitana con la calidez de Villa María.
