--- a/admin/administracion.html
+++ b/admin/administracion.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>PizzaLine administración</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <nav>
         <h2>PizzaLine administración</h2>
         <button id="btn-logout">Cerrar sesión</button>
-
     </nav>
+
     <main>
         <div>
             <ul>
@@ -18,6 +19,7 @@
                 <li><p><a href="adminPedidos.html">Gestionar pedidos</a></p></li>
                 <li><p><a href="gestionarRoles.html">Gestionar roles</a></p></li>
                 <li><p><a href="adminDashboard.html">Dashboard</a></p></li>
+                <li><p><a href="adminChangePassword.html">Cambiar contraseña de usuarios</a></p></li>
             </ul>
         </div>
     </main>
