--- a/adminChangePassword.html
+++ b/adminChangePassword.html
@@ -26,7 +26,14 @@
     <button id="btn-change">Cambiar</button>
   </div>
 
+  <a href="index.html" id="btnVolver">
+    <span class="pizzaIcono">🍕</span>
+    <span class="textoVolver">Volver</span>
+  </a>
+
+
   <script src="../gestionarRoles.js"></script> <!-- opcional si ya define URL_USERS -->
   <script src="changePassword.js"></script>
+  
 </body>
 </html>
