--- a/adminChangePassword.html
+++ b/adminChangePassword.html
@@ -2,31 +2,102 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cambiar contraseña - Admin</title>
   <link rel="stylesheet" href="../style.css">
+  <style>
+    .user-row {
+      padding: 8px 10px;
+      border-bottom: 1px solid #ccc;
+    }
+    .user-name {
+      cursor: pointer;
+      text-decoration: underline;
+      color: #d32f2f;
+    }
+  </style>
 </head>
 <body>
-  <h1>Cambiar contraseña de usuario</h1>
 
-  <div id="usuarios-list">
-    <!-- se llenará con usuarios -->
+  <!-- HEADER -->
+  <div class="headerPrincipal" style="display:flex; justify-content:space-between; align-items:center; padding:10px 20px;">
+    <div class="logo">
+      <img src="../images/pizzalinePNG3.png" alt="PizzaLine Logo" style="height:50px;" />
+    </div>
+    <div style="flex:1; display:flex; justify-content:center;">
+      <h2>Administración - Cambiar contraseña</h2>
+    </div>
+    <div id="auth-area"></div>
   </div>
+
+  <main style="padding:20px;">
+    <h3>Usuarios registrados</h3>
+    <div id="usuarios-list">
+      <!-- Se llenará con usuarios -->
+    </div>
+  </main>
 
   <template id="tpl-user-row">
     <div class="user-row">
       <span class="user-name"></span>
-      <button class="btn-select">Seleccionar</button>
     </div>
   </template>
 
-  <div id="form-cambiar" style="display:none; margin-top:20px;">
-    <h3 id="selected-user"></h3>
-    <label>Nueva contraseña</label>
-    <input id="nueva-pass" type="password" />
-    <button id="btn-change">Cambiar</button>
-  </div>
+  <script>
+    // ========================= Header y Logout =========================
+    function getStoredUser() {
+      try { return JSON.parse(localStorage.getItem("pizzaline_user")); } 
+      catch { return null; }
+    }
 
-  <script src="../gestionarRoles.js"></script> <!-- opcional si ya define URL_USERS -->
-  <script src="changePassword.js"></script>
+    function updateAuthArea() {
+      const auth = document.getElementById("auth-area");
+      if (!auth) return;
+      const user = getStoredUser();
+      if (user) {
+        auth.innerHTML = `
+          <span>Hola, ${user.nombre.split(" ")[0]}</span>
+          <button id="logout-btn">Cerrar sesión</button>
+        `;
+        document.getElementById("logout-btn").addEventListener("click", () => {
+          localStorage.removeItem("pizzaline_user");
+          window.location.href = "../index.html";
+        });
+      } else {
+        auth.innerHTML = `<a href="../login.html">Login</a>`;
+      }
+    }
+
+    updateAuthArea();
+
+    // ========================= Listado de Usuarios =========================
+    const URL_USERS = "https://690b50956ad3beba00f46174.mockapi.io/api/users"; 
+    const usuariosListEl = document.getElementById("usuarios-list");
+    const tpl = document.getElementById("tpl-user-row");
+
+    async function cargarUsuarios() {
+      try {
+        const res = await fetch(URL_USERS);
+        const users = await res.json();
+        usuariosListEl.innerHTML = "";
+        users.forEach(u => {
+          const node = tpl.content.cloneNode(true);
+          const nombreSpan = node.querySelector(".user-name");
+
+          nombreSpan.textContent = `${u.nombre} (${u.email})`;
+          nombreSpan.addEventListener("click", () => {
+            window.location.href = `perfilUsuario.html?id=${u.id}`;
+          });
+
+          usuariosListEl.appendChild(node);
+        });
+      } catch (e) {
+        usuariosListEl.innerHTML = `<p style="color:red;">Error cargando usuarios: ${e.message}</p>`;
+      }
+    }
+
+    document.addEventListener("DOMContentLoaded", cargarUsuarios);
+  </script>
+
 </body>
 </html>
